@@ -127,7 +127,7 @@ myexecvp(char *a, char **args)
 	(void) sprintf(msg, "\nCannot exec %s", a);
 	perror(msg);		/* display the reason */
 	askforreturn();		/* wait until the user sees the message */
-	exit(1);		/* exit the child */
+	myexit(1);		/* exit the child */
 	/* NOTREACHED */
 }
 
